# roomtune

./: .gitignore  pyproject.toml  start.sh
Umik/: 7055332.txt  7055332_90deg.txt
backend/: __init__.py  main.py  orchestrator.py  requirements.txt
backend/analysis/: __init__.py  frequency.py  impulse.py  room.py  smoothing.py
backend/api/: __init__.py  analysis.py  connection.py  eq.py  measurement.py
backend/audio/: __init__.py  calibration.py  devices.py  recorder.py  sweep.py
backend/eq/: __init__.py  autoeq.py  filters.py  targets.py
backend/integration/: __init__.py  camilla.py  moode.py  rpi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/charts/: EQChart.tsx  FrequencyChart.tsx  ImpulseChart.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  LevelMeter.tsx  StatusBadge.tsx  index.ts
frontend/src/components/wizard/: AnalysisStep.tsx  ApplyEQStep.tsx  ConnectionStep.tsx  MeasurementStep.tsx  SetupStep.tsx  TargetStep.tsx  VerificationStep.tsx  WizardLayout.tsx  WizardNav.tsx  index.ts
frontend/src/hooks/: useAPI.ts  useMeasurement.ts  useWebSocket.ts  useWizard.tsx
frontend/src/types/: index.ts
tests/backend/: test_api.py  test_calibration.py  test_filters.py  test_sweep.py  test_targets.py
